# tanat-utils

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  codemeta.json  pyproject.toml
.github/workflows/: ci.yml
scripts/: extract_changelog.sh  gtag.sh  test.sh
src/tanat_utils/: __init__.py  check_version.py  display.py  pretty_format.py
src/tanat_utils/caching/: __init__.py  cachable.py  fingerprint.py  settings.py
src/tanat_utils/registrable/: exceptions.py  mixin.py
tests/: test_check_version.py  test_pretty_format.py
tests/caching/: test_concurrency.py  test_lru_eviction.py  test_recursive_fingerprint.py  test_serialization.py  test_settings_mixin.py  test_shadow_isolation.py  test_update_settings.py
tests/registrable/: test_pydantic_validation.py  test_registrable.py  test_registrable_cachable.py
